force-app/main/default/objects/Orden_de_pago__c/Orden_de_pago__c.object-meta.xml
<CustomObject>
    <label>Orden de pago</label>
    <nameField>
        <displayFormat>OP-{00000000}</displayFormat>
        <label>Nombre de Orden de pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes de pago</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>