force-app/main/default/objects/Orden_de_pago__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banco</label>
    <referenceTo>Banco__c</referenceTo>
    <relationshipLabel>Ordenes de pago</relationshipLabel>
    <relationshipName>Ordenes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>