force-app/main/default/objects/Orden_de_pago__c/fields/Caja__c.field-meta.xml
<CustomField>
    <fullName>Caja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caja</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Moneda__c</field>
            <operation>equals</operation>
            <valueField>Caja__c.Moneda__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Caja__c</referenceTo>
    <relationshipLabel>Ordenes de pago</relationshipLabel>
    <relationshipName>Ordenes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>