force-app/main/default/objects/Orden_de_pago__c/fields/Certificacion__c.field-meta.xml
<CustomField>
    <fullName>Certificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificacion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Certificacion__c.Orden_de_compra__c</field>
            <operation>equals</operation>
            <valueField>$Source.Orden_de_compra__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Certificacion__c</referenceTo>
    <relationshipLabel>Ordenes de pago</relationshipLabel>
    <relationshipName>Ordenes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>