force-app/main/default/objects/Orden_de_pago__c/fields/Cheque__c.field-meta.xml
<CustomField>
    <fullName>Cheque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cheque</label>
    <referenceTo>Cheque__c</referenceTo>
    <relationshipLabel>Ordenes de pago</relationshipLabel>
    <relationshipName>Ordenes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>