force-app/main/default/objects/Orden_de_pago__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Factura</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Orden_de_compra__c</field>
            <operation>equals</operation>
            <valueField>Factura__c.Orden_de_compra__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Ordenes de pago</relationshipLabel>
    <relationshipName>Ordenes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>