force-app/main/default/objects/Orden_de_pago__c/fields/Monto_certificado__c.field-meta.xml
<CustomField>
    <fullName>Monto_certificado__c</fullName>
    <formula>Certificacion__r.Total_certificado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto certificado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>