force-app/main/default/objects/Orden_de_pago__c/fields/Monto_convertido_a_pesos__c.field-meta.xml
<CustomField>
    <fullName>Monto_convertido_a_pesos__c</fullName>
    <label>Monto convertido a pesos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>