force-app/main/default/objects/Orden_de_pago__c/fields/Movimiento_de_caja__c.field-meta.xml
<CustomField>
    <fullName>Movimiento_de_caja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movimiento de caja</label>
    <referenceTo>Movimiento_de_caja__c</referenceTo>
    <relationshipLabel>Ordenes de pago</relationshipLabel>
    <relationshipName>Ordenes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>