force-app/main/default/objects/Orden_de_pago__c/fields/Numero_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_factura__c</fullName>
    <formula>text(Factura__r.Comprobante__c) + &#39;-&#39;+  Factura__r.Numero__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de factura</label>
    <type>Text</type>
</CustomField>