force-app/main/default/objects/Orden_de_pago__c/fields/Periodo_pago__c.field-meta.xml
<CustomField>
    <fullName>Periodo_pago__c</fullName>
    <formula>date(year( Fecha_de_pago__c ), month( Fecha_de_pago__c  ), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo pago</label>
    <type>Date</type>
</CustomField>