force-app/main/default/objects/Orden_de_pago__c/fields/Prioridad_para_el_proyecto__c.field-meta.xml
<CustomField>
    <fullName>Prioridad_para_el_proyecto__c</fullName>
    <label>Urgencia de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgente</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>