force-app/main/default/objects/Orden_de_pago__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <formula>Orden_de_compra__r.Proveedor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proveedor</label>
    <type>Text</type>
</CustomField>