force-app/main/default/objects/Orden_de_pago__c/fields/Referencia_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Referencia_de_pago__c</fullName>
    <label>Referencia de pago</label>
    <type>TextArea</type>
</CustomField>