force-app/main/default/objects/Orden_de_pago__c/fields/Referente_administracion__c.field-meta.xml
<CustomField>
    <fullName>Referente_administracion__c</fullName>
    <formula>Orden_de_compra__r.Proveedor__r.Referente_administracion__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente administracion</label>
    <type>Text</type>
</CustomField>