force-app/main/default/objects/Orden_de_pago__c/fields/Requiere_certificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Requiere_certificaci_n__c</fullName>
    <formula>Orden_de_compra__r.Requiere_certificacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiere certificación?</label>
    <type>Checkbox</type>
</CustomField>