force-app/main/default/objects/Orden_de_pago__c/fields/Responsable_carga__c.field-meta.xml
<CustomField>
    <fullName>Responsable_carga__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable carga</label>
    <referenceTo>Responsable__c</referenceTo>
    <relationshipLabel>Ordenes de pago</relationshipLabel>
    <relationshipName>Ordenes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>