force-app/main/default/objects/Orden_de_pago__c/fields/Saldo_a_pagar_orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_pagar_orden_de_compra__c</fullName>
    <formula>Orden_de_compra__r.Saldo_a_pagar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo a pagar orden de compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>