force-app/main/default/objects/Orden_de_pago__c/fields/Sociedad_responsable__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_responsable__c</fullName>
    <formula>Orden_de_compra__r.Sociedad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sociedad responsable</label>
    <type>Text</type>
</CustomField>