force-app/main/default/objects/Orden_de_pago__c/fields/Tipo_de_comprobante__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_comprobante__c</fullName>
    <formula>case(Factura__r.Tipo_de_factura__c, &#39;A&#39;, &#39;A&#39;,&#39;B&#39;, &#39;B&#39;,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de comprobante</label>
    <type>Text</type>
</CustomField>