force-app/main/default/objects/Orden_de_pago__c/fields/Tipo_instrumento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_instrumento__c</fullName>
    <label>Tipo instrumento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Debito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>