force-app/main/default/objects/Orden_de_pago__c/fields/Valor_pagado_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Valor_pagado_en_dolares__c</fullName>
    <formula>if( Moneda__r.Name = &#39;Pesos Argentinos&#39; , Monto__c /  Cotizacion_dolar__c , Monto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor pagado en dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>