force-app/main/default/objects/Orden_de_pago__c/fields/Valor_total_orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_orden_de_compra__c</fullName>
    <formula>Orden_de_compra__r.Valor_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total orden de compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>