force-app/main/default/objects/Orden_de_pago__c/validationRules/Control_monto_certificado_vs_monto_op.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_monto_certificado_vs_monto_op</fullName>
    <active>true</active>
    <errorConditionFormula>if(  Requiere_certificaci_n__c  == true,  Monto_certificado__c &lt;  Monto__c , false)</errorConditionFormula>
    <errorDisplayField>Monto__c</errorDisplayField>
    <errorMessage>El monto de la orden de pago no puede superar lo certificado</errorMessage>
</ValidationRule>