force-app/main/default/objects/Orden_de_pago__c/validationRules/Control_orden_de_pago_completa_oc.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_orden_de_pago_completa_oc</fullName>
    <active>true</active>
    <errorConditionFormula>if( 
(ISPICKVAL(Estado__c, &quot;Pendiente Aprobación&quot;) == true || 
ISPICKVAL(Estado__c, &quot;Preparar pago&quot;) == true) &amp;&amp;( 
ISPICKVAL( Orden_de_compra__r.Estado__c , &quot;Ingresada&quot;) || 
ISPICKVAL( Orden_de_compra__r.Estado__c , &quot;Para aprobar&quot;) || 
ISPICKVAL( Orden_de_compra__r.Estado__c , &quot;Rechazada&quot;) || 
ISPICKVAL( Orden_de_compra__r.Estado__c , &quot;Renegociar&quot;) 

), true, false)</errorConditionFormula>
    <errorMessage>No puede mandar a autorizar pagos cuando la orden de compra no esta en estado Autorizada</errorMessage>
</ValidationRule>