force-app/main/default/objects/Orden_de_pago__c/validationRules/Control_orden_de_pago_completa_referenci.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_orden_de_pago_completa_referenci</fullName>
    <active>true</active>
    <errorConditionFormula>if( 
   ISPICKVAL(Estado__c, &quot;Pendiente Aprobación&quot;) == true &amp;&amp; Referencia_de_pago__c == &quot;&quot;, true, false)</errorConditionFormula>
    <errorDisplayField>Referencia_de_pago__c</errorDisplayField>
    <errorMessage>Debe indicar la referencia de pago</errorMessage>
</ValidationRule>