force-app/main/default/objects/Orden_de_pago__c/validationRules/Control_orden_de_pago_completa_tipo_inst.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_orden_de_pago_completa_tipo_inst</fullName>
    <active>true</active>
    <errorConditionFormula>if( 
   ISPICKVAL(Estado__c, &quot;Pendiente Aprobación&quot;) == true , 
ISPICKVAL(Tipo_instrumento__c, &quot;&quot;), false)</errorConditionFormula>
    <errorDisplayField>Tipo_instrumento__c</errorDisplayField>
    <errorMessage>Debe indicar el tipo de instrumento</errorMessage>
</ValidationRule>