force-app/main/default/objects/Orden_de_pago__c/validationRules/Control_requiere_certificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_requiere_certificacion</fullName>
    <active>true</active>
    <errorConditionFormula>if( Requiere_certificaci_n__c == True, isnull( Certificacion__c ), false)</errorConditionFormula>
    <errorDisplayField>Certificacion__c</errorDisplayField>
    <errorMessage>Es necesario que seleccione una certificación</errorMessage>
</ValidationRule>