force-app/main/default/objects/Orden_de_pago__c/validationRules/Factura_obligatoria_al_momento_de_pago.validationRule-meta.xml
<ValidationRule>
    <fullName>Factura_obligatoria_al_momento_de_pago</fullName>
    <active>false</active>
    <errorConditionFormula>if (  ISPICKVAL(Estado__c, &#39;Pagada&#39;)  &amp;&amp; Factura__c = null, true,false)</errorConditionFormula>
    <errorDisplayField>Factura__c</errorDisplayField>
    <errorMessage>Es obligatorio el ingreso del comprobante (Factura , recibo, remito) al momento del pago</errorMessage>
</ValidationRule>