force-app/main/default/objects/Orden_de_pago__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_de_pago__c</columns>
    <columns>Caja__c</columns>
    <columns>Moneda__c</columns>
    <columns>Cotizacion_dolar__c</columns>
    <columns>Monto__c</columns>
    <columns>Monto_convertido_a_dolares__c</columns>
    <columns>Monto_convertido_a_pesos__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>