force-app/main/default/objects/Orden_de_pago__c/listViews/No_Pagadas.listView-meta.xml
<ListView>
    <fullName>No_Pagadas</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_de_pago__c</columns>
    <columns>Monto__c</columns>
    <columns>Movimiento_de_caja__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>notEqual</operation>
        <value>Pagada</value>
    </filters>
    <label>No Pagadas</label>
</ListView>