force-app/main/default/objects/Orden_de_pago__c/listViews/Pagadas.listView-meta.xml
<ListView>
    <fullName>Pagadas</fullName>
    <columns>NAME</columns>
    <columns>Orden_de_compra__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_de_pago__c</columns>
    <columns>Monto__c</columns>
    <columns>Caja__c</columns>
    <columns>Movimiento_de_caja__c</columns>
    <columns>Moneda__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pagada</value>
    </filters>
    <filters>
        <field>Caja__c</field>
        <operation>equals</operation>
    </filters>
    <label>Pagadas</label>
</ListView>